--- a/markset/index.html
+++ b/markset/index.html
@@ -23,8 +23,11 @@
       main {
         display: none;
       }
-      #led_matrix.tr.td{
-        min-width: 5px;
+      #led_matrix tr td{
+        padding: 0px;
+      }
+      #led_matrix {
+        background-color: gray;
       }
     </style>
 
