--- a/markset/index.html
+++ b/markset/index.html
@@ -121,7 +121,11 @@
       </div>
       <div class="row">
 
-        <h5 class="card-title">LEDs <button type='button' id="countDownBegin" class='btn btn-success' >Begin Countdown</button></h5>
+        <h5 class="card-title">LEDs 
+          <button type='button' id="countDownBegin" class='btn btn-success' >Begin Countdown</button>
+          <button type='button' id="showOrder" class='btn btn-success' >Show Order</button>
+          <button type='button' id="raceBegin" class='btn btn-success' >Begin Race</button>
+        </h5>
         <table class="table table-condensed">
           <tbody id="led_matrix">
           </tbody>
