--- a/markset/index.html
+++ b/markset/index.html
@@ -121,6 +121,14 @@
       </div>
       <div class="row">
 
+        <h5 class="card-title">Anchor 
+          <button type='button' id="anchorReverse" class='btn btn-success' >Reverse</button>
+          <button type='button' id="anchorForward" class='btn btn-success' >Forward</button>
+          <button type='button' id="anchorStop" class='btn btn-success' >Stop</button>
+        </h5>
+      </div>
+      <div class="row">
+
         <h5 class="card-title">LEDs 
           <button type='button' id="countDownBegin" class='btn btn-success' >Begin Countdown</button>
           <button type='button' id="showOrder" class='btn btn-success' >Show Order</button>
