remove unnecessary things

--- a/markset/index.html
+++ b/markset/index.html
@@ -129,11 +129,14 @@
       </div>
       <div class="row">
 
-        <h5 class="card-title">LEDs 
+        <h5 class="card-title">Racing 
+        </h5>
           <button type='button' id="countDownBegin" class='btn btn-success' >Begin Countdown</button>
           <button type='button' id="showOrder" class='btn btn-success' >Show Order</button>
           <button type='button' id="raceBegin" class='btn btn-success' >Begin Race</button>
-        </h5>
+          <button type='button' id="raceDelay" class='btn btn-warning' >Delay</button>
+          <button type='button' id="showMessage" class='btn btn-success' >Show Message</button>
+          <input id="txtMessage" ype="text" value="GBCA" />
         <table class="table table-condensed">
           <tbody id="led_matrix">
           </tbody>
