--- a/markset/index.html
+++ b/markset/index.html
@@ -121,6 +121,13 @@
       </div>
       <div class="row">
 
+        <h5 class="card-title">Boat 
+          <button type='button' id="boatArm" class='btn btn-success' >Arm</button>
+          <button type='button' id="boatDisarm" class='btn btn-success' >Disarm</button>
+        </h5>
+      </div>
+      <div class="row">
+
         <h5 class="card-title">Anchor 
           <button type='button' id="anchorReverse" class='btn btn-success' >Reverse</button>
           <button type='button' id="anchorForward" class='btn btn-success' >Forward</button>
