--- a/markset/index.html
+++ b/markset/index.html
@@ -124,6 +124,7 @@
         <button type='button' id="anchorDown" class='btn btn-success'>Down</button>
         <button type='button' id="anchorHold" class='btn btn-success'>Hold</button>
         <button type='button' id="anchorDisable" class='btn btn-success'>Disable</button>
+        <button type='button' id="anchorLock" class='btn btn-success'>Lock</button>
       </div>
     </div>
 
