--- a/markset/index.html
+++ b/markset/index.html
@@ -54,9 +54,22 @@
     <div class="row">
       <div class="col-lg-3">
         <select id="prestartTime" class="form-control">
+          <option value="60">60 min</option>
+          <option value="45">45 min</option>
+          <option value="30">30 min</option>
           <option value="15">15 min</option>
+          <option value="14">14 min</option>
+          <option value="13">13 min</option>
+          <option value="12">12 min</option>
+          <option value="11">11 min</option>
           <option value="10">10 min</option>
+          <option value="9">9 min</option>
+          <option value="8">8 min</option>
+          <option value="7">7 min</option>
+          <option value="6">6 min</option>
           <option value="5">5 min</option>
+          <option value="4">4 min</option>
+          <option value="3">3 min</option>
           <option value="2">2 min</option>
           <option value="1">1 min</option>
         </select> 
