--- a/markset/index.html
+++ b/markset/index.html
@@ -48,9 +48,14 @@
   <main role="main" class="container" id="status">
 
 
+    <div class="row">
+      <div class="col-lg-3">
+        <h2 >Racing</h2>
+      </div>
 
-    <h2 >Racing
-    </h2>
+    </div>
+
+    
     <div class="row">
       <div class="col-lg-3">
         <select id="prestartTime" class="form-control">
@@ -160,6 +165,16 @@
     <div class="row">
       <div class="col pb-2">
         <button type='button' id="hornTest" class='btn btn-success'>Test</button>
+      </div>
+    </div>
+
+    <h5 class="card-title">Voltage </h5>
+    <div class="row">
+      <div class="col-lg-3 pb-2">
+        <button type='button' id="checkVoltage" class='btn btn-success'>Check Voltage</button>
+      </div>
+      <div class="col-lg-3  pb-3">
+        <span id="voltage"></span>
       </div>
     </div>
 
