add waking tunes

--- a/markset/index.html
+++ b/markset/index.html
@@ -122,8 +122,17 @@
       <div class="col-lg-3">
         <input id="txtMessage" ype="text" value="http://GBCA.com/WNR" />
       </div>
-      <div class="col-lg-2 pb-2">
+      <div class="col-lg-3 pb-2">
         <button type='button' id="showMessage" class='btn btn-success'>Show Message</button>
+        <button type='button' id="stopMessage" class='btn btn-success'>Clear</button>
+      </div>
+    </div>
+    <h5 class="card-title">Music </h5>
+    <div class="row">
+      <div class="col-lg-12 pb-2">
+        <button type='button' id="musicPlay" class='btn btn-success'>Play</button>
+        <button type='button' id="musicNext" class='btn btn-success'>Next</button>
+        <button type='button' id="musicStop" class='btn btn-success'>Stop</button>
       </div>
     </div>
 
@@ -158,13 +167,6 @@
       <div class="col pb-2">
         <button type='button' id="webserverOff" class='btn btn-success'>Turn Off</button>
         <button type='button' id="webserverRestart" class='btn btn-success'>Restart</button>
-      </div>
-    </div>
-
-    <h5 class="card-title">Horn </h5>
-    <div class="row">
-      <div class="col pb-2">
-        <button type='button' id="hornTest" class='btn btn-success'>Test</button>
       </div>
     </div>
 
