small fixes to main page

--- a/markset/index.html
+++ b/markset/index.html
@@ -61,7 +61,35 @@
         <select id="prestartTime" class="form-control">
           <option value="60">60 min</option>
           <option value="45">45 min</option>
+          <option value="44">44 min</option>
+          <option value="43">43 min</option>
+          <option value="42">42 min</option>
+          <option value="41">41 min</option>
+          <option value="40">40 min</option>
+          <option value="39">39 min</option>
+          <option value="38">38 min</option>
+          <option value="37">37 min</option>
+          <option value="36">36 min</option>
+          <option value="35">35 min</option>
+          <option value="34">34 min</option>
+          <option value="33">33 min</option>
+          <option value="32">32 min</option>
+          <option value="31">31 min</option>
           <option value="30">30 min</option>
+          <option value="29">29 min</option>
+          <option value="28">28 min</option>
+          <option value="27">27 min</option>
+          <option value="26">26 min</option>
+          <option value="25">25 min</option>
+          <option value="24">24 min</option>
+          <option value="23">23 min</option>
+          <option value="22">22 min</option>
+          <option value="21">21 min</option>
+          <option value="20">20 min</option>
+          <option value="19">19 min</option>
+          <option value="18">18 min</option>
+          <option value="17">17 min</option>
+          <option value="16">16 min</option>
           <option value="15">15 min</option>
           <option value="14">14 min</option>
           <option value="13">13 min</option>
@@ -120,7 +148,7 @@
     </div>
     <div class="row">
       <div class="col-lg-3">
-        <input id="txtMessage" ype="text" value="http://GBCA.com/WNR" />
+        <input id="txtMessage" ype="text" value="http://GBCA.org/WNR" />
       </div>
       <div class="col-lg-3 pb-2">
         <button type='button' id="showMessage" class='btn btn-success'>Show Message</button>
