--- a/markset/index.html
+++ b/markset/index.html
@@ -14,6 +14,7 @@
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/fontawesome.css">
 
   <!-- TinyWeb styles -->
   <style type="text/css">
@@ -164,11 +165,15 @@
       </div>
     </div>
 
-    <h5 class="card-title">Boat </h5>
+    <h5 class="card-title">Boat <i id="mavros_status" class="fa-solid fa-anchor" style="color:red;"></i> <i id="boat_status" class="fa-solid fa-anchor" style="color:red;"></i> <span id="mavros_state"></span> </h5>
     <div class="row">
-      <div class="col-lg-2 pb-2">
+      <div class="col-lg-4 pb-2">
         <button type='button' id="boatArm" class='btn btn-success'>Arm</button>
         <button type='button' id="boatDisarm" class='btn btn-success'>Disarm</button>
+      </div>
+      <div id="armed_panel" class="col-lg-8 pb-2">
+        <button type='button' id="navToRamp" class='btn btn-success'>Ramp</button>
+        <button type='button' id="navToStart" class='btn btn-success'>Start</button>
       </div>
     </div>
 
@@ -195,6 +200,7 @@
       <div class="col pb-2">
         <button type='button' id="webserverOff" class='btn btn-success'>Turn Off</button>
         <button type='button' id="webserverRestart" class='btn btn-success'>Restart</button>
+        <button type='button' id="restartRos" class='btn btn-success'>Restart Ros</button>
       </div>
     </div>
 
@@ -211,10 +217,9 @@
 
   </main> <!-- of status -->
 
-
-
   <!-- JQuery -->
   <script src="/js/jquery-3.2.1.min.js"></script>
+  <script src="/js/roslib.min.js"></script>
 
   <script src="/markset.js"></script>
 
