mostly working... need to flip scroll to bottom always

--- a/markset/index.html
+++ b/markset/index.html
@@ -119,9 +119,8 @@
       <div class="col-lg-3 ">
         <select id="singleClassData" class="form-control">
           <option value="J-22">J-22</option>
-          <option value="NSB">NSB </option>
-          <option value="NSA/C22">NSA </option>
-          <option value="PORTSM">PORT</option>
+          <option value="JAM ">JAM </option>
+          <option value="PORT">PORT</option>
           <option value="SPIN">SPIN</option>
         </select>
       </div>
@@ -167,54 +166,6 @@
       </div>
     </div>
 
-    <h5 class="card-title">Boat <i id="mavros_status" class="fa-solid fa-anchor" style="color:red;"></i> <i id="boat_status" class="fa-solid fa-anchor" style="color:red;"></i> <span id="mavros_state"></span> </h5>
-    <div class="row">
-      <div class="col-lg-4 pb-2">
-        <button type='button' id="boatArm" class='btn btn-success'>Arm</button>
-        <button type='button' id="boatDisarm" class='btn btn-success'>Disarm</button>
-      </div>
-      <div id="armed_panel" class="col-lg-8 pb-2">
-        <button type='button' id="navToRamp" class='btn btn-success'>Ramp</button>
-        <button type='button' id="navToStart" class='btn btn-success'>Start</button>
-      </div>
-    </div>
-
-    <h5 class="card-title">Anchor <span id="anchor_status"></span></h5>
-    <div class="row">
-      <div class="col pb-2">
-        <button type='button' id="anchorUp" class='btn btn-success'>Up</button>
-        <button type='button' id="anchorDown" class='btn btn-success'>Down</button>
-        <button type='button' id="anchorHold" class='btn btn-success'>Hold</button>
-        <button type='button' id="anchorDisable" class='btn btn-success'>Disable</button>
-        <button type='button' id="anchorLock" class='btn btn-success'>Lock</button>
-      </div>
-    </div>
-
-    <h5 class="card-title">Lights</h5>
-    <div class="row">
-      <div class="col pb-2">
-        <button type='button' id="lights" class='btn btn-success'>Turn On</button>
-      </div>
-    </div>
-        
-    <h5 class="card-title">Webserver</h5>
-    <div class="row">
-      <div class="col pb-2">
-        <button type='button' id="webserverOff" class='btn btn-success'>Turn Off</button>
-        <button type='button' id="webserverRestart" class='btn btn-success'>Restart</button>
-        <button type='button' id="restartRos" class='btn btn-success'>Restart Ros</button>
-      </div>
-    </div>
-
-    <h5 class="card-title">Voltage </h5>
-    <div class="row">
-      <div class="col-lg-3 pb-2">
-        <button type='button' id="checkVoltage" class='btn btn-success'>Check Voltage</button>
-      </div>
-      <div class="col-lg-3  pb-3">
-        <span id="voltage"></span>
-      </div>
-    </div>
 
 
   </main> <!-- of status -->
