--- a/markset/index.html
+++ b/markset/index.html
@@ -38,7 +38,7 @@
 <body>
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">MARKus</a>
+    <a class="navbar-brand" href="#">MARKee</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
       aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -51,7 +51,7 @@
 
     <div class="row">
       <div class="col-lg-3">
-        <h2 >Racing</h2>
+        <h2 >WNR Racing</h2>
       </div>
       <div class="col-lg-3  pb-3">
         <button type='button' id="raceWNR" class='btn btn-primary'>Countdown WNR</button>
