--- a/markset/index.html
+++ b/markset/index.html
@@ -166,6 +166,16 @@
       </div>
     </div>
 
+    <h5 class="card-title">Webserver</h5>
+    <div class="row">
+      <div class="col pb-2">
+        <button type='button' id="webserverOff" class='btn btn-success'>Turn Off</button>
+        <button type='button' id="webserverRestart" class='btn btn-success'>Restart</button>
+        <button type='button' id="webserverPull" class='btn btn-success'>Pull Latest</button>
+      </div>
+    </div>
+
+
 
 
   </main> <!-- of status -->
