--- a/markset/index.html
+++ b/markset/index.html
@@ -54,7 +54,8 @@
         <h2 >WNR Racing</h2>
       </div>
       <div class="col-lg-3  pb-3">
-        <button type='button' id="raceWNR" class='btn btn-primary'>Countdown WNR</button>
+        <button type='button' id="raceWNR" class='btn btn-primary'>Countdown WNR</button> 
+        <button type='button' id="hornTest" class='btn'>Test Horn</button>
       </div>
     </div>
 
